--- a/wp-content/themes/greentech/style.css
+++ b/wp-content/themes/greentech/style.css
@@ -2093,6 +2093,8 @@ ul.posts article header > :last-child {
 .mini-post .image {
   overflow: hidden;
   width: 100%;
+  max-height: 150px;
+  object-fit: cover;
 }
 .mini-post .image img {
   transition: transform 0.2s ease-out;
@@ -2130,6 +2132,25 @@ ul.posts article header > :last-child {
 .mini-posts {
   margin: 0 0 2em 0;
 }
+
+.mini-post-image-wrapper {
+  overflow: hidden;
+  width: 100%;
+  max-width: 100%;
+  line-height: 0;
+}
+
+.mini-post-image-wrapper p {
+  margin: 0;
+  padding: 0;
+}
+
+.mini-post-image-wrapper img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
 @media screen and (max-width: 1280px) {
   .mini-posts {
     display: -moz-flex;
